# systemd-bootchart

./: .gitignore  .travis.yml  Makefile.am  README  TODO  autogen.sh  configure.ac
.github/workflows/: ci.yml
debian/: autoreconf.after  autoreconf.before  changelog  control  copyright  gbp.conf  rules  watch
debian/tests/: bootchart  control
debian/upstream/: metadata
man/: bootchart.conf.xml  systemd-bootchart.xml
src/: alloc-util.c  alloc-util.h  architecture.h  attributes.h  bootchart.c  bootchart.conf  bootchart.h  cgroup-util.c  cgroup-util.h  conf-files.c  conf-files.h  conf-parser.c  conf-parser.h  def.h  dirent-util.c  dirent-util.h  escape.c  escape.h  fd-util.c  fd-util.h  fileio.c  fileio.h  fs-util.c  fs-util.h  hash-funcs.c  hash-funcs.h  hashmap.c  hashmap.h  hexdecoct.c  hexdecoct.h  hostname-util.c  hostname-util.h  io-util.c  io-util.h  log.c  log.h  macro.h  mempool.c  missing.h  parse-printf-format.h  (+41 more)
tests/: run
units/: .gitignore  systemd-bootchart.service.in
